--- a/src/main/resources/wowchat.conf
+++ b/src/main/resources/wowchat.conf
@@ -41,6 +41,7 @@ wow {
   account=${?WOW_ACCOUNT}
   password=${?WOW_PASSWORD}
   character=${?WOW_CHARACTER}
+  timeout=10000
 
 # Other example configurations
 
@@ -50,6 +51,7 @@ wow {
 # account=<discord bot account>
 # password=<discord bot password>
 # character=<in game character>
+# timeout=<timeout time in MS>
 
 # version=2.4.3
 # realmlist=logon.vengeancewow.com
@@ -57,6 +59,7 @@ wow {
 # account=<discord bot account>
 # password=<discord bot password>
 # character=<in game character>
+# timeout=<timeout time in MS>
 
 # version=3.3.5
 # realmlist=wow.gamer-district.org
@@ -64,6 +67,7 @@ wow {
 # account=<discord bot account>
 # password=<discord bot password>
 # character=<in game character>
+# timeout=<timeout time in MS>
 
 # version=4.3.4
 # realmlist=login.hades-wow.com
@@ -71,6 +75,7 @@ wow {
 # account=<discord bot account>
 # password=<discord bot password>
 # character=<in game character>
+# timeout=<timeout time in MS>
 
 # version=5.4.8
 # realmlist=hu.logon.tauri.hu
@@ -78,6 +83,7 @@ wow {
 # account=<discord bot account>
 # password=<discord bot password>
 # character=<in game character>
+# timeout=<timeout time in MS>
 }
 
 # guild notifications
